force-app/main/default/objects/Snapshot_Data__c/Snapshot_Data__c.object-meta.xml
<CustomObject>
    <description>Where snapshot data is stored, using multiple record types instead of objects</description>
    <label>Snapshot Data</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Snapshot Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>