force-app/main/default/objects/Snapshot_Data__c/fields/Logged_in_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_7_Days__c</fullName>
    <formula>IF( (As_of_Date__c -  DATEVALUE( Last_Login_Date_Time__c ))&lt;=6 ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in 7 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>