force-app/main/default/objects/Snapshot_Data__c/fields/User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User&apos;s Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>