force-app/main/default/objects/Snapshot_Data__c/fields/User_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_s_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User&apos;s Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>