force-app/main/default/objects/Snapshot_Data__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>false</active>
    <label>Opportunity</label>
</RecordType>