force-app/main/default/objects/Snapshot_Data__c/recordTypes/User_Adoption.recordType-meta.xml
<RecordType>
    <fullName>User_Adoption</fullName>
    <active>true</active>
    <label>User Adoption</label>
</RecordType>