force-app/main/default/objects/Snapshot_Data__c/listViews/Adoption.listView-meta.xml
<ListView>
    <fullName>Adoption</fullName>
    <columns>User_s_Profile__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Snapshot_Report__c</columns>
    <columns>Logged_in_7_Days__c</columns>
    <columns>User_s_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_s_State__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Snapshot_Report__c</field>
        <operation>equals</operation>
        <value>User Adoption</value>
    </filters>
    <label>Adoption</label>
</ListView>