force-app/main/default/objects/Snapshot_Data__c/listViews/StuckOpportunity.listView-meta.xml
<ListView>
    <fullName>StuckOpportunity</fullName>
    <columns>User_Full_Name__c</columns>
    <columns>Stage_Name__c</columns>
    <columns>Age_Avg__c</columns>
    <columns>Amount__c</columns>
    <columns>As_of_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Snapshot_Report__c</field>
        <operation>equals</operation>
        <value>Stuck Opportunity</value>
    </filters>
    <label>Stuck Opportunity</label>
</ListView>